[tool.poetry]
name = "tiny-bsky"
version = "0.1.0"
description = ""
authors = ["Kimikazu Kato <kimikazu@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
